--- a/app/views/studios/index.erb
+++ b/app/views/studios/index.erb
@@ -2,7 +2,7 @@
 
 <ul class="studio-list">
   <% @studios.each do |studio| %>
-    <li><a href="restaurants/<%= studio.id %>"><span class="studio-name"><%= studio.name %></span> </a> - <span class="studio-created-by"><%= studio.user.email %></span>
+    <li><a href="studios/<%= studio.id %>"><span class="studio-name"><%= studio.name %></span> </a> - <span class="studio-created-by"><%= studio.user.email %></span>
     </li>
   <%end%>
 </ul>
